MNEMONIC-660: Fix DurablePersonNGTest testcase failurei second step
Signed-off-by: Chunyong He <chunyong.he@gmail.com>